[build-system]
requires = ["setuptools>=62", "setuptools-rust>=1.8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-geohash"
version = "0.9.2"
description = "Fast, accurate python geohashing library"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Hiroaki Kawai" },
    { name = "Steven Lee", email = "alitrack.com@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/alitrack/python-geohash2"
Repository = "https://github.com/alitrack/python-geohash2"

[tool.setuptools]
py-modules = ["geohash", "quadtree", "jpgrid", "jpiarea"]

[tool.maturin]
include = ["geohash.py", "quadtree.py", "jpgrid.py", "jpiarea.py"]
